More 'out the box' setup, login and (dummy) /
-Dx

--- a/templates/default/login.html
+++ b/templates/default/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block body %}
- <FORM ACTION="." METHOD="POST">
+ <FORM METHOD="POST">
   <INPUT TYPE="text" NAME="u">
   <INPUT TYPE="password" NAME="p">
   <INPUT TYPE="submit" VALUE="Log In!">
