--- a/templates/default/notes.html
+++ b/templates/default/notes.html
@@ -1,8 +1,33 @@
 {% extends "base.html" %}
 
 {% block body %}
-<ul>
+<ul id="myNotes" class="grid">
  <li>a static note</li>
+ <li>another note</li>
+ <li>more notes, all in static HTML</li>
+ <li>list another note</li>
+ <li>Bacon ipsum dolor sit amet tenderloin tail beef chuck venison pancetta. Spare ribs pork loin swine, t-bone meatball rump ham hock ground round pork belly beef ribs. Drumstick pastrami turkey, flank ball tip meatloaf strip steak. Ground round shank bresaola beef andouille ball tip. Pastrami spare ribs shank ball tip, headcheese tenderloin fatback tongue. Drumstick spare ribs short loin, shank beef ribs pork belly pork loin chuck flank jowl rump pancetta brisket meatloaf hamburger. Beef ribs brisket strip steak pork chop, shank tongue cow short ribs tail hamburger chicken.</li>
+ <li>last note, html <H1> really! </H1></li> <li>a static note</li>
+ <li>another note</li>
+ <li>more notes, all in static HTML</li>
+ <li>list another note</li>
+ <li>Bacon ipsum dolor sit amet tenderloin tail beef chuck venison pancetta. Spare ribs pork loin swine, t-bone meatball rump ham hock ground round pork belly beef ribs. Drumstick pastrami turkey, flank ball tip meatloaf strip steak. Ground round shank bresaola beef andouille ball tip. Pastrami spare ribs shank ball tip, headcheese tenderloin fatback tongue. Drumstick spare ribs short loin, shank beef ribs pork belly pork loin chuck flank jowl rump pancetta brisket meatloaf hamburger. Beef ribs brisket strip steak pork chop, shank tongue cow short ribs tail hamburger chicken.</li>
+ <li>last note, html <H1> really! </H1></li> <li>a static note</li>
+ <li>another note</li>
+ <li>more notes, all in static HTML</li>
+ <li>list another note</li>
+ <li>Bacon ipsum dolor sit amet tenderloin tail beef chuck venison pancetta. Spare ribs pork loin swine, t-bone meatball rump ham hock ground round pork belly beef ribs. Drumstick pastrami turkey, flank ball tip meatloaf strip steak. Ground round shank bresaola beef andouille ball tip. Pastrami spare ribs shank ball tip, headcheese tenderloin fatback tongue. Drumstick spare ribs short loin, shank beef ribs pork belly pork loin chuck flank jowl rump pancetta brisket meatloaf hamburger. Beef ribs brisket strip steak pork chop, shank tongue cow short ribs tail hamburger chicken.</li>
+ <li>last note, html <H1> really! </H1></li> <li>a static note</li>
+ <li>another note</li>
+ <li>more notes, all in static HTML</li>
+ <li>list another note</li>
+ <li>Bacon ipsum dolor sit amet tenderloin tail beef chuck venison pancetta. Spare ribs pork loin swine, t-bone meatball rump ham hock ground round pork belly beef ribs. Drumstick pastrami turkey, flank ball tip meatloaf strip steak. Ground round shank bresaola beef andouille ball tip. Pastrami spare ribs shank ball tip, headcheese tenderloin fatback tongue. Drumstick spare ribs short loin, shank beef ribs pork belly pork loin chuck flank jowl rump pancetta brisket meatloaf hamburger. Beef ribs brisket strip steak pork chop, shank tongue cow short ribs tail hamburger chicken.</li>
+ <li>last note, html <H1> really! </H1></li> <li>a static note</li>
+ <li>another note</li>
+ <li>more notes, all in static HTML</li>
+ <li>list another note</li>
+ <li>Bacon ipsum dolor sit amet tenderloin tail beef chuck venison pancetta. Spare ribs pork loin swine, t-bone meatball rump ham hock ground round pork belly beef ribs. Drumstick pastrami turkey, flank ball tip meatloaf strip steak. Ground round shank bresaola beef andouille ball tip. Pastrami spare ribs shank ball tip, headcheese tenderloin fatback tongue. Drumstick spare ribs short loin, shank beef ribs pork belly pork loin chuck flank jowl rump pancetta brisket meatloaf hamburger. Beef ribs brisket strip steak pork chop, shank tongue cow short ribs tail hamburger chicken.</li>
+ <li>last note, html <H1> really! </H1></li> <li>a static note</li>
  <li>another note</li>
  <li>more notes, all in static HTML</li>
  <li>list another note</li>
